welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:28: error: '(' expected but identifier found.
  for compteur 
      ^FlowerPot:29: error: illegal start of simple expression
}
^